# Compiler

./: CMakeLists.txt  README.md  configuration.hpp  main.cpp
Examples/: Example.al
Sources/: AbstactSyntaxTree.cpp  AbstactSyntaxTree.hpp  AbstractSyntaxTreeImpl.cpp  AbstractSyntaxTreeImpl.hpp  Aliases.hpp  CompilationArguments.cpp  CompilationArguments.hpp  KeywordsTable.cpp  KeywordsTable.hpp  Main.cpp  Token.cpp  Token.hpp  TokensFactory.hpp
Sources/Algorithms/: Algorithms.hpp  ParsingAlgorithms.cpp  ParsingAlgorithms.hpp
Sources/Frontend/: LexicalAnalyzer.cpp  LexicalAnalyzer.hpp  LexicalAnalyzerImpl.cpp  LexicalAnalyzerImpl.hpp
frontend/: ast.cpp  ast.hpp  ipreprocessor.hpp  preprocessor.cpp  preprocessor.hpp  result.cpp  result.hpp
frontend/lexing/: keywords.cpp  keywords.hpp  lexems.hpp  lexer.cpp  lexer.hpp  token.hpp
frontend/parsing/: parser.cpp  parser.hpp
tools/: metafunctions.h
